fix: update copy button to include text and hover for visibility and accessibility. Move styles into component.

--- a/styles/content.css
+++ b/styles/content.css
@@ -377,7 +377,3 @@ span.token.keyword.control-flow {
     background: rgb(252, 162, 162);
   }
 }
-
-.copy {
-  margin-left: 1rem;
-}
